--- a/TryApp/TryApp/TryApp/Page1.xaml
+++ b/TryApp/TryApp/TryApp/Page1.xaml
@@ -9,16 +9,16 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
-                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Label Text="Top Left" Grid.Row="0" Grid.Column="0" BackgroundColor="Yellow"/>
+            <Label Text="Top Left" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" BackgroundColor="Yellow"/>
             <Label Text="Top Right" Grid.Row="0" Grid.Column="1" BackgroundColor="Green" />
-            <Label Text="Bottom Left" Grid.Row="1" Grid.Column="0" BackgroundColor="Red"/>
-            <Label Text="Bottom Right" Grid.Row="1" Grid.Column="1" />
+            <!--<Label Text="Bottom Left" Grid.Row="1" Grid.Column="0" BackgroundColor="Red"/>
+            <Label Text="Bottom Right" Grid.Row="1" Grid.Column="1" />--> 
         </Grid>
     </ContentPage.Content>
 </ContentPage>
