--- a/TryApp/TryApp/TryApp/Page1.xaml
+++ b/TryApp/TryApp/TryApp/Page1.xaml
@@ -6,21 +6,18 @@
              mc:Ignorable="d"
              x:Class="TryApp.Page1">
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Label Text="Top Left" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" BackgroundColor="Yellow"/>
-            <Label Text="Top Right" Grid.Row="0" Grid.Column="1" BackgroundColor="Green" />
-            <!--<Label Text="Bottom Left" Grid.Row="1" Grid.Column="0" BackgroundColor="Red"/>-->
-            <Label Text="Bottom Right" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="10" BackgroundColor="Aqua" />
-        </Grid>
+        <AbsoluteLayout>
+            <Label Text="I'm centered on iPhone 4 but no other device"
+                AbsoluteLayout.LayoutBounds="115,150,100,100" LineBreakMode="WordWrap"  />
+            <Label Text="I'm bottom center on every device."
+                AbsoluteLayout.LayoutBounds=".5,1,.5,.1" AbsoluteLayout.LayoutFlags="All"
+                LineBreakMode="WordWrap"  />
+            <BoxView Color="Olive"  AbsoluteLayout.LayoutBounds="1,.5, 25, 100"
+                AbsoluteLayout.LayoutFlags="PositionProportional" />
+            <BoxView Color="Red" AbsoluteLayout.LayoutBounds="0,.5,25,100"
+                AbsoluteLayout.LayoutFlags="PositionProportional" />
+            <BoxView Color="Blue" AbsoluteLayout.LayoutBounds=".5,0,100,25"
+                AbsoluteLayout.LayoutFlags="PositionProportional" />
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
