--- a/MobApp/MobApp/MobApp/Login.xaml
+++ b/MobApp/MobApp/MobApp/Login.xaml
@@ -5,10 +5,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="MobApp.Login">
+    <Frame Padding="0" HasShadow="True">
     <AbsoluteLayout BackgroundColor="#B3F2DD"  >
         <Image Source="user.png" AbsoluteLayout.LayoutBounds=".5,.15,.8,.3" AbsoluteLayout.LayoutFlags="All" />
-        <Entry x:Name="email"  TextChanged="Email_TextChanged" Completed="Email_Completed" Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".5,.5,.8,.08" AbsoluteLayout.LayoutFlags="All"/>
-        <Entry x:Name="password" Placeholder="Password" Completed="Password_Completed" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".5,.62,.8,.08" AbsoluteLayout.LayoutFlags="All"/>
-        <Button x:Name="login" Text="Log In" Clicked="OnButtonClicked" BackgroundColor="#19D6D2" TextColor="White" AbsoluteLayout.LayoutBounds=".5,.74,.8,.1" AbsoluteLayout.LayoutFlags="All"/>
-    </AbsoluteLayout>
+        <Image Source="tie.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".06,.5,.05,.09" AbsoluteLayout.LayoutFlags="All" />
+        <Entry Grid.Column="1" Grid.ColumnSpan="1"  x:Name="email"  TextChanged="Email_TextChanged" Completed="Email_Completed" Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".5,.5,.8,.09" AbsoluteLayout.LayoutFlags="All"/>
+        <Image Source="lock1.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".06,.62,.05,.09" AbsoluteLayout.LayoutFlags="All" />
+            <Entry x:Name="password" Placeholder="Password" Completed="Password_Completed" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".5,.62,.8,.09" AbsoluteLayout.LayoutFlags="All"/>
+            <Button x:Name="login" Text="Log In" Clicked="OnButtonClicked" BackgroundColor="#19D6D2" TextColor="White" AbsoluteLayout.LayoutBounds=".5,.74,.8,.1" AbsoluteLayout.LayoutFlags="All"/>
+        </AbsoluteLayout>
+    </Frame>
 </ContentPage>
+
+
+   
+    
