--- a/MobApp/MobApp/MobApp/Login.xaml
+++ b/MobApp/MobApp/MobApp/Login.xaml
@@ -5,17 +5,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="MobApp.Login">
-    
+   
     <AbsoluteLayout BackgroundColor="#B3F2DD"  >
         <Image Source="user.png" AbsoluteLayout.LayoutBounds=".5,.15,.8,.3" AbsoluteLayout.LayoutFlags="All" />
             <Image Source="tie.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".1, .5, .06, .09" AbsoluteLayout.LayoutFlags="All" />
-            <Entry  x:Name="email"  TextChanged="Email_TextChanged" Completed="Email_Completed" Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".59, .5, .74, .09" AbsoluteLayout.LayoutFlags="All"/>
+            <Entry  Text="{Binding Email}"   Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".59, .5, .74, .09" AbsoluteLayout.LayoutFlags="All"/>
             <Image Source="lock1.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".1, .62, .06,.09" AbsoluteLayout.LayoutFlags="All" />
-            <Entry x:Name="password" Placeholder="Password" Completed="Password_Completed" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".59, .62, .74, .09" AbsoluteLayout.LayoutFlags="All"/>
-        <Frame Padding="10" HasShadow="True" BackgroundColor="#17C6C2" AbsoluteLayout.LayoutBounds=".5, .74, .8,.09" AbsoluteLayout.LayoutFlags="All">    
-        <Button x:Name="login" Padding="0"  Text="Log In" Clicked="OnButtonClicked" BackgroundColor="#19D6D2" TextColor="White" />
-         </Frame>
-        </AbsoluteLayout>
+        <Entry Text="{Binding Password}" Placeholder="Password" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".59, .62, .74, .09" AbsoluteLayout.LayoutFlags="All"/>
+        <Frame Padding="10" HasShadow="True" BackgroundColor="#17C6C2" AbsoluteLayout.LayoutBounds=".5, .74, .8,.09" AbsoluteLayout.LayoutFlags="All">
+            <Button Command="{Binding OnLogin}" Padding="0"  Text="Log In" BackgroundColor="#19D6D2" TextColor="White" />
+        </Frame>
+        <Label Text="{Binding Txt}"/>
+    </AbsoluteLayout>
    
 </ContentPage>
 
