--- a/MobApplication/MobApplication/MobApplication/View/Login.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/Login.xaml
@@ -9,7 +9,7 @@
     <AbsoluteLayout BackgroundColor="#B3F2DD"  >
         <Image Source="user.png" AbsoluteLayout.LayoutBounds=".5,.15,.8,.3" AbsoluteLayout.LayoutFlags="All" />
         <Image Source="tie.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".1, .5, .06, .07" AbsoluteLayout.LayoutFlags="All" />
-        <Entry Text="{Binding Email}" Completed="Email_Completed" x:Name="email"   Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".59, .5, .74, .07" AbsoluteLayout.LayoutFlags="All"/>
+        <Entry Text="{Binding Email}" x:Name="email"   Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".59, .5, .74, .07" AbsoluteLayout.LayoutFlags="All"/>
         <Image Source="lock1.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".1, .65, .06,.07" AbsoluteLayout.LayoutFlags="All" />
         <Entry Text="{Binding Password}" x:Name="password" Placeholder="Password" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".59, .65, .74, .07" AbsoluteLayout.LayoutFlags="All"/>
         <Frame Padding="10" HasShadow="True" BackgroundColor="#17C6C2" AbsoluteLayout.LayoutBounds=".5, .78, .8,.07" AbsoluteLayout.LayoutFlags="All">
