--- a/TryApp/TryApp/TryApp/Page3.xaml
+++ b/TryApp/TryApp/TryApp/Page3.xaml
@@ -4,11 +4,11 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="TryApp.Page1">
+             x:Class="TryApp.Page3">
     <ContentPage.Content>
         <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-    <Label Text="I am at Page 1"/>
-            <Button Text="Add Page 2" Clicked="Button_Clicked"/>
+            <Label Text="I am at Page 3"/>
+            <Button Text="Go to Page 1" Clicked="Button_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
