--- a/MobApplication/MobApplication/MobApplication/View/MainPage1.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/MainPage1.xaml
@@ -7,24 +7,34 @@
              x:Class="MobApplication.View.MainPage1"
              MasterBehavior="Popover">
     <MasterDetailPage.Master>
-        <ContentPage Padding="10" BackgroundColor="Gray" Title="Menu">
+        <ContentPage Padding="10" BackgroundColor="AliceBlue" Title="Menu">
             <ContentPage.Content>
                 <StackLayout>
                     <Button Text="Login" Clicked="Login_Clicked"></Button>
-                    <Button Text="Contact Us"></Button>
+                    <Button Text="Contact Us" Clicked="ContactUs_Clicked"></Button>
                 </StackLayout>
             </ContentPage.Content>
         </ContentPage>
     </MasterDetailPage.Master>
     <MasterDetailPage.Detail >
         <ContentPage BackgroundColor="White">
-            <StackLayout>
-                <Grid>
-                    <Button Grid.Row="0" Text="About Us" HorizontalOptions="Start" Clicked="AboutUs_Clicked"></Button>
-                    <Button Grid.Row="0" BackgroundColor="Tomato" Text="Contact Us" HorizontalOptions="End" Clicked="ContactUs_Clicked"></Button>
-                </Grid>
-                <ContentView x:Name="contentview">
+            <StackLayout VerticalOptions="Fill">
+                 <ContentView x:Name="contentview" Padding="20">
                 </ContentView>
+                <Grid x:Name="ProjectBtnGrid" VerticalOptions="EndAndExpand" IsVisible="False" Padding="0" BackgroundColor="Red">
+                    <Button Text="Home" Clicked="Home_Clicked"  Grid.Column="0" Padding="0" BackgroundColor="Red"></Button>
+                    <Button  Text="BIM Network" Clicked="BIM_Clicked" Grid.Column="1" Padding="0" BackgroundColor="Red"></Button>
+                    <Button  Text="Display Now" Clicked="Display_Clicked" Grid.Column="2" Padding="0" BackgroundColor="Red"></Button>
+                    <Button Text="Meeting Hub"  Clicked="Meeting_Clicked" Grid.Column="3" Padding="0" BackgroundColor="Red"></Button>
+                    <!--<Button Text="NETFacilities"  Clicked="NET_Clicked" Grid.Column="4"></Button>-->
+                    <Button Text="Contact Us" BackgroundColor="Red"  Clicked="ContactUs_Clicked" Grid.Column="4" Padding="0"></Button>
+                </Grid>
+                <Grid x:Name="TabBtnGrid" VerticalOptions="EndAndExpand" IsVisible="True" Padding="0" BackgroundColor="AliceBlue">
+                    <Button Text="Home" Clicked="Home_Clicked"  Grid.Column="0" BackgroundColor="AliceBlue"></Button>
+                    <Button  Text="About Us" Clicked="AboutUs_Clicked" Grid.Column="1" Padding="0" BackgroundColor="AliceBlue"></Button>
+                    <Button  Text="Project" Clicked="Project_Clicked" Grid.Column="2" Padding="0" BackgroundColor="AliceBlue"></Button>
+                    <Button Text="Contact Us" BackgroundColor="AliceBlue"  Clicked="ContactUs_Clicked" Grid.Column="3" Padding="0"></Button>
+                </Grid>
             </StackLayout>
         </ContentPage>
     </MasterDetailPage.Detail>
