--- a/Mob1/Mob1/Mob1/View/GalleryPage.xaml
+++ b/Mob1/Mob1/Mob1/View/GalleryPage.xaml
@@ -6,33 +6,27 @@
              mc:Ignorable="d"
              x:Class="Mob1.View.GalleryPage">
     <ContentPage.Content>
-        <StackLayout>
-
+        <StackLayout BackgroundColor="#F6F5F5" Padding="10">
             <CollectionView x:Name="collectionList" SelectionMode="Multiple" SelectionChanged="CollectionList_SelectionChanged">
                 <CollectionView.ItemsLayout>
-                    <GridItemsLayout Orientation="Vertical" Span="2" VerticalItemSpacing="0"/>
+                    <GridItemsLayout Orientation="Vertical" Span="2" VerticalItemSpacing="20" HorizontalItemSpacing="20"/>
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-
-                        <Frame HasShadow="True">
-                            <Grid Padding="6" >
+                        <Frame BackgroundColor="White" HasShadow="False" BorderColor="BlueViolet" Padding="0">
+                            <Grid BackgroundColor="White" Padding="0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="4*"/>
-
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
-                                <Image Source="{Binding ImageUrl}" Grid.Row="0" />
-                                <Label Text="{Binding Title}" Padding="10" VerticalOptions="Start" Grid.Row="1"/>
-                                <CheckBox  Grid.Row="1" HorizontalOptions="End"/>
-
-
+                                <Image Source="{Binding ImageUrl}" Grid.Row="0"  />
+                                <Label Text="{Binding Title}" Padding="10" FontSize="Medium" VerticalOptions="Start" Grid.Row="1"/>
                             </Grid>
                         </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-
+            <Button Text="Save" BackgroundColor="Red"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
