--- a/MobApplication/MobApplication/MobApplication/View/WeatherInformation.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/WeatherInformation.xaml
@@ -9,11 +9,12 @@
     <ContentPage.Content>
         <StackLayout BackgroundColor="DarkGray" Padding="0,10,0,0">
             <Label Text="Weather Information" TextColor="White"/>
-            <ListView x:Name="listView" SeparatorColor="BlueViolet" SeparatorVisibility="Default" ItemSelected="listView_ItemSelected" ItemTapped="listView_ItemTapped">
+            <ListView x:Name="listView" SeparatorColor="BlueViolet" SeparatorVisibility="None" ItemSelected="listView_ItemSelected" ItemTapped="listView_ItemTapped">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout  Orientation="Horizontal" VerticalOptions="Center" Padding="10" BackgroundColor="#DFDFDF">
+                            <Frame HasShadow="True" Padding="0,0,0,2">
+                                <StackLayout  Orientation="Horizontal" VerticalOptions="Center" Padding="10" BackgroundColor="#DFDFDF">
                                 <Image Source="{Binding ImageUrl}"></Image>
                                 <StackLayout HorizontalOptions="StartAndExpand">
                                     <Label Text="{Binding State}" FontSize="Medium"/>
@@ -22,6 +23,7 @@
                                 <Label Text="{Binding Temprature}" FontSize="Large"  VerticalOptions="Center"></Label>
                                 <Image Source="https://img.icons8.com/material/24/000000/forward--v1.png"></Image>
                             </StackLayout>
+                                </Frame>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
