--- a/MobApplication/MobApplication/MobApplication/View/WeatherInformation.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/WeatherInformation.xaml
@@ -7,18 +7,18 @@
              x:Class="MobApplication.View.WeatherInformation"
              Title="Weather Information">
     <ContentPage.Content>
-        <StackLayout x:Name="g1" BackgroundColor="DarkGray" Padding="0,10,0,0" Spacing="2">
+        <StackLayout x:Name="g1" Padding="0,10,0,0" Spacing="2">
             <Label Text="Weather Information" TextColor="White"/>
-            <!--<ListView x:Name="listView" SeparatorColor="BlueViolet" SeparatorVisibility="None" ItemSelected="listView_ItemSelected" ItemTapped="listView_ItemTapped">
+            <ListView x:Name="listView" SeparatorColor="BlueViolet" SeparatorVisibility="None" ItemSelected="listView_ItemSelected" ItemTapped="listView_ItemTapped">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>-->
-
-            <BindableLayout.ItemTemplate>
-                <DataTemplate>
+                        <ViewCell  Tapped="ViewCell_Tapped">
+                            <!--<BindableLayout.ItemTemplate>
+                <DataTemplate>-->
 
                     <Frame HasShadow="True" Padding="0">
-                        <StackLayout  Orientation="Horizontal" VerticalOptions="Center" Padding="10" BackgroundColor="#DFDFDF">
+                        <!--<StackLayout  Orientation="Horizontal" VerticalOptions="Center" Padding="10" BackgroundColor="#DFDFDF">-->
+                        <StackLayout x:Name="ss"  Orientation="Horizontal"  VerticalOptions="Center" Padding="10" >
                             <Image Source="{Binding ImageUrl}"></Image>
                             <StackLayout HorizontalOptions="StartAndExpand" >
                                 <Label Text="{Binding State}" FontSize="Medium"/>
@@ -28,12 +28,12 @@
                             <Image Source="https://img.icons8.com/material/24/000000/forward--v1.png"></Image>
                         </StackLayout>
                     </Frame>
-                </DataTemplate>
-            </BindableLayout.ItemTemplate>
-            <!--</ViewCell>
+                <!--</DataTemplate>
+            </BindableLayout.ItemTemplate>-->
+            </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
-            </ListView>-->
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
