--- a/MobApplication/MobApplication/MobApplication/View/ActivityLogPage.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/ActivityLogPage.xaml
@@ -8,48 +8,26 @@
              x:Class="MobApplication.View.ActivityLogPage">
     <ContentPage.Content>
         <StackLayout Padding="15" BackgroundColor="White">
-            <!--<Image WidthRequest="50" HeightRequest="50" Aspect="AspectFill" Source="p.jpg" />-->
-
             <Label Text="Activity Log" FontSize="Small" Padding="10" BackgroundColor="White" HorizontalOptions="Center"/>
-                <StackLayout x:Name="g1" Padding="0,10,0,0">
-                    <ListView x:Name="listView" IsGroupingEnabled="True" SeparatorVisibility="None" HasUnevenRows="True" >
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <ViewCell>
+            <StackLayout x:Name="g1" Padding="0,10,0,0">
+                <ListView x:Name="listView" IsGroupingEnabled="True" SeparatorVisibility="None" HasUnevenRows="True" >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
                                 <Frame HasShadow="True"  BackgroundColor="#F3F3F5" Margin="0" Padding="0,0,0,1">
                                     <AbsoluteLayout Padding="0,20,0,25" BackgroundColor="White">
                                         <ic:CircleImage WidthRequest="50" HeightRequest="50" Aspect="AspectFill" Source="{Binding Image}" />
                                         <Label Text="{Binding Name}" AbsoluteLayout.LayoutBounds="60,15,1,1" AbsoluteLayout.LayoutFlags="SizeProportional"/>
-                                        <!--<Label Text=" &gt;" VerticalOptions="Center" HorizontalOptions="End"/>-->
-                                        <Image Source="https://img.icons8.com/material/24/000000/forward--v1.png" VerticalOptions="Center" HorizontalOptions="End" AbsoluteLayout.LayoutBounds="1,0.5,1,1" AbsoluteLayout.LayoutFlags="SizeProportional"></Image>
-                                        <Label Text="{Binding Status}" IsVisible="False" Padding="0"/>
-                                        <Label x:Name="LblNotStarted" IsVisible="{Binding IsCheckNotStarted }" Padding="0" AbsoluteLayout.LayoutBounds="60,55,1,1" AbsoluteLayout.LayoutFlags="SizeProportional">
+                                        <Label Text=" &gt;" TextColor="Black" VerticalOptions="Center" HorizontalOptions="End" AbsoluteLayout.LayoutBounds="1,0.5,1,1" AbsoluteLayout.LayoutFlags="SizeProportional"/>
+                                        <!--<Image Source="https://img.icons8.com/material/24/000000/forwardv1.png" VerticalOptions="Center" HorizontalOptions="End" AbsoluteLayout.LayoutBounds="1,0.5,1,1" AbsoluteLayout.LayoutFlags="SizeProportional"></Image>-->
+                                        <!--<Label Text="{Binding Status}" IsVisible="False" Padding="0"/>-->
+                                        <Label x:Name="LblNotStarted"  Padding="0" AbsoluteLayout.LayoutBounds="60,55,1,1" AbsoluteLayout.LayoutFlags="SizeProportional">
                                             <Label.FormattedText>
                                                 <FormattedString>
                                                     <Span Text="Status Changed from "/>
-                                                    <Span Text="{Binding Status}" TextColor="Red"/>
+                                                    <Span Text="{Binding PrevStatus}" TextColor="{Binding PrevStatusColor}"/>
                                                     <Span Text=" to "/>
-                                                    <Span Text="In progress" TextColor="#0F7FF1" />
-                                                </FormattedString>
-                                            </Label.FormattedText>
-                                        </Label>
-                                        <Label x:Name="LblOnHold" IsVisible="{Binding IsCheckOnHold }" Padding="0" AbsoluteLayout.LayoutBounds="60,55,1,1" AbsoluteLayout.LayoutFlags="SizeProportional">
-                                            <Label.FormattedText>
-                                                <FormattedString>
-                                                    <Span Text="Status Changed from "/>
-                                                    <Span Text="{Binding Status}" TextColor="#F68B00"/>
-                                                    <Span Text=" to "/>
-                                                    <Span Text="In progress" TextColor="#0F7FF1" />
-                                                </FormattedString>
-                                            </Label.FormattedText>
-                                        </Label>
-                                        <Label x:Name="LblInProgress" IsVisible="{Binding IsCheckInProgress }" Padding="0" AbsoluteLayout.LayoutBounds="60,55,1,1" AbsoluteLayout.LayoutFlags="SizeProportional">
-                                            <Label.FormattedText>
-                                                <FormattedString>
-                                                    <Span Text="Status Changed from "/>
-                                                    <Span Text="{Binding Status}" TextColor="Red"/>
-                                                    <Span Text=" to "/>
-                                                    <Span Text="Completed" TextColor="#A9D9AB" />
+                                                    <Span Text="{Binding CurrStatus}" TextColor="{Binding CurrStatusColor}" />
                                                 </FormattedString>
                                             </Label.FormattedText>
                                         </Label>
@@ -64,17 +42,17 @@
                                     </AbsoluteLayout>
                                 </Frame>
                             </ViewCell>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <ListView.GroupHeaderTemplate>
-                            <DataTemplate>
-                                <ViewCell>
-                                    <Label Text="{Binding Title}" Padding="20,0,0,0"></Label>
-                                </ViewCell>
-                            </DataTemplate>
-                        </ListView.GroupHeaderTemplate>
-                    </ListView>
-                </StackLayout>
-       </StackLayout>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    <ListView.GroupHeaderTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Label Text="{Binding Title}" Padding="20,0,0,0"></Label>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.GroupHeaderTemplate>
+                </ListView>
+            </StackLayout>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
