--- a/MobApplication/MobApplication/MobApplication/App.xaml
+++ b/MobApplication/MobApplication/MobApplication/App.xaml
@@ -6,6 +6,22 @@
              mc:Ignorable="d"
              x:Class="MobApplication.App">
     <Application.Resources>
-
-    </Application.Resources>
+       
+        <ResourceDictionary>
+            <Style x:Key="LabelHeading" TargetType="Label">
+                <Setter Property="FontSize" Value="Small"/>
+                <Setter Property="TextColor" Value="Gray"/>
+            </Style>
+            <Style x:Key="LabelValue" TargetType="Label">
+                <Setter Property="FontSize" Value="Small"/>
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="Padding" Value="28,0,0,0"/>
+            </Style>
+        </ResourceDictionary>
+   
+        <!--<Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="White"/>
+            <Setter Property="BarTextColor" Value="Black"/>
+        </Style>-->
+        </Application.Resources>
 </Application>
