--- a/MobApplication/MobApplication/MobApplication/View/DetailPage.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/DetailPage.xaml
@@ -19,19 +19,18 @@
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>-->
-    <!--<ContentPage.Resources>
+    <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="LabelHeading" TargetType="Label">
                 <Setter Property="FontSize" Value="Small"/>
                 <Setter Property="TextColor" Value="Gray"/>
             </Style>
-            <Style x:Key="LabelValue" TargetType="Label">
-                <Setter Property="FontSize" Value="Small"/>
+            <Style x:Key="LabelValue" TargetType="Label"   BasedOn="{StaticResource LabelHeading}">
                 <Setter Property="TextColor" Value="Black"/>
                 <Setter Property="Padding" Value="28,0,0,0"/>
             </Style>
         </ResourceDictionary>
-    </ContentPage.Resources>-->
+    </ContentPage.Resources>
     <ContentPage.Content>
         <ScrollView>
         <StackLayout Padding="50" BackgroundColor="White">
