--- a/MobApplication/MobApplication/MobApplication/View/DetailPage.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/DetailPage.xaml
@@ -29,6 +29,9 @@
                 <Setter Property="TextColor" Value="Black"/>
                 <Setter Property="Padding" Value="28,0,0,0"/>
             </Style>
+            <Style x:Key="ButtonHighlight" TargetType="Button">
+                <Setter Property="BorderColor" Value="Green"/>
+            </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
@@ -77,7 +80,7 @@
                     <Label Text="Location" Style="{StaticResource LabelHeading}"/>
                 </StackLayout>
                 <Label Text="{Binding Location}" Style="{StaticResource LabelValue}" />
-                <Button Text="Edit Notes" TextColor="White" CornerRadius="25"  BackgroundColor="#BC2729" Padding="10"/>
+                <Button Text="Edit Notes" TextColor="White" CornerRadius="25" WidthRequest="{OnPlatform UWP=30}" Clicked="Button_Clicked" Style="{DynamicResource buttonStyle}" BackgroundColor="#BC2729" Padding="10">                </Button>
         </StackLayout>
             </ScrollView>
     </ContentPage.Content>
