--- a/MobApplication/MobApplication/MobApplication/View/Login.xaml
+++ b/MobApplication/MobApplication/MobApplication/View/Login.xaml
@@ -12,11 +12,34 @@
         <Image Source="user.png" AbsoluteLayout.LayoutBounds=".5,.15,.8,.3" AbsoluteLayout.LayoutFlags="All" />
         <Image Source="tie.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".1, .5, .06, .07" AbsoluteLayout.LayoutFlags="All" />
         <!--<Control:CustomEntry Placeholder="Enter something here..."   ></Control:CustomEntry>-->
-        <Control:CustomEntry  Text="{Binding Email}" x:Name="email" Completed="Email_Completed"   Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".59, .5, .74, .07" AbsoluteLayout.LayoutFlags="All"/>
+        <Control:CustomEntry  Text="{Binding Email}" x:Name="email" Completed="Email_Completed"   Margin="0, 0, 0, 0" BackgroundColor="White" Placeholder="Username" AbsoluteLayout.LayoutBounds=".59, .5, .74, .07" AbsoluteLayout.LayoutFlags="All">
+            <Control:CustomEntry.Triggers>
+                <Trigger TargetType="Entry" Property="IsFocused" Value="True">
+                    <Setter Property="BackgroundColor" Value="LightGray"/>
+                    <Setter Property="PlaceholderColor" Value="Black"/>
+
+                </Trigger>
+            </Control:CustomEntry.Triggers>
+        </Control:CustomEntry>
         <Image Source="lock1.png" BackgroundColor="White"  AbsoluteLayout.LayoutBounds=".1, .6, .06,.07" AbsoluteLayout.LayoutFlags="All" />
-        <Entry Text="{Binding Password}"   x:Name="password" Placeholder="Password" Completed="Password_Completed" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".59, .6, .74, .07" AbsoluteLayout.LayoutFlags="All"/>
+        <Entry Text="{Binding Password}"   x:Name="password" Placeholder="Password" Completed="Password_Completed" IsPassword="True" Margin="0, 0, 0, 0"  BackgroundColor="White" AbsoluteLayout.LayoutBounds=".59, .6, .74, .07" AbsoluteLayout.LayoutFlags="All">
+            <Entry.Triggers>
+                <Trigger TargetType="Entry" Property="IsFocused" Value="True">
+                    <Setter Property="BackgroundColor" Value="LightGray"/>
+                    <Setter Property="PlaceholderColor" Value="Black"/>
+
+                </Trigger>
+            </Entry.Triggers>
+        </Entry>
         <Frame Padding="0" AbsoluteLayout.LayoutBounds=".47, .7, .8,.06" AbsoluteLayout.LayoutFlags="All">
-            <Button Command="{Binding OnLogin}"  x:Name="login" Padding="0"  Text="Log In"  BackgroundColor="#19D6D2" TextColor="White" />
+            <Button Command="{Binding OnLogin}"  x:Name="login" Padding="0"  Text="Log In"  BackgroundColor="#19D6D2" TextColor="White">
+                <Button.Triggers>
+                    <DataTrigger TargetType="Button"
+                                 Binding="{Binding Source={x:Reference email},Path=Text.Length}" Value="0">
+                        <Setter Property="IsEnabled" Value="False" />
+                    </DataTrigger>
+                </Button.Triggers>
+            </Button>
         </Frame>
     </AbsoluteLayout>
 </ContentPage>
